update sprint 2